# django-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
boilerplate/: manage.py
boilerplate/app/: admin.py  apps.py  models.py  serializers.py  tests.py  token.py  urls.py  views.py
boilerplate/app/migrations/: 0001_initial.py
boilerplate/app/serializers/: signup_serializer.py
boilerplate/boilerplate/: asgi.py  settings.py  urls.py  wsgi.py
